--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="12dp"/>
-    <stroke android:color="@color/primary" android:width="1dp"/>
+    <stroke android:color="@color/silver" android:width="1dp"/>
 
 </shape>
