--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="redi">#A92323</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lightblue">#ADD8E6</color>
+    <color name="cardwhite">#FFFFFF</color>
+    <color name="red">#E13E3E</color>
+
+
 </resources>
