--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/lightblue"
+    android:background="@drawable/image1"
     android:layout_height="match_parent"
     tools:context=".MainActivity2">
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -21,6 +22,6 @@
         android:layout_gravity="bottom"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="50dp"
-        android:src="@drawable/plus_icon" />
+        android:src="@drawable/baseline_add_24" />
 
 </RelativeLayout>
