--- a/app/src/main/res/layout/activity_reminder.xml
+++ b/app/src/main/res/layout/activity_reminder.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/lightblue"
+    android:background="@drawable/image1"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
@@ -27,7 +27,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Add Reminder Here..."
+                android:text="Add Birthday Here..."
                 android:textSize="30dp"
                 android:textStyle="bold"
                 android:layout_margin="10dp"/>
@@ -38,7 +38,7 @@
                 android:layout_height="90dp"
                 android:layout_margin="10dp"
                 android:background="@drawable/edit_background"
-                android:hint="Enter The Task" />
+                android:hint="Enter Name" />
 
             <LinearLayout
                 android:layout_width="match_parent"
