--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:text="Title"
             android:textSize="18sp"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:layout_margin="8dp"/>
 
         <TextView
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:text="Date"
             android:textSize="14sp"
-            android:textColor="#808080"
+            android:textColor="#FFFFFF"
             android:layout_margin="8dp"/>
 
         <TextView
@@ -35,24 +35,24 @@
             android:layout_height="wrap_content"
             android:text="Time"
             android:textSize="14sp"
-            android:textColor="#808080"
+            android:textColor="#FFFFFF"
             android:layout_margin="8dp"/>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/editButton"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/edit_icon"
-        android:layout_margin="8dp"
-        android:clickable="true"
-        android:focusable="true"/>
+<!--    <ImageView-->
+<!--        android:id="@+id/editButton"-->
+<!--        android:layout_width="40dp"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:src="@drawable/edit_icon"-->
+<!--        android:layout_margin="8dp"-->
+<!--        android:clickable="true"-->
+<!--        android:focusable="true"/>-->
 
     <ImageView
         android:id="@+id/deleteButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@drawable/delete_icon"
+        android:src="@drawable/baseline_delete_24"
         android:layout_margin="8dp"
         android:clickable="true"
         android:focusable="true"/>
@@ -60,7 +60,7 @@
         android:id="@+id/forwardButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@drawable/edit_icon"
+        android:src="@drawable/baseline_card_giftcard_24"
         android:layout_margin="8dp"
         android:clickable="true"
         android:focusable="true"/>
