--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,30 +34,30 @@
         android:id="@+id/textview2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/sign_in"
+        android:layout_marginTop="30dp"
+        android:text="Login"
+        android:textAlignment="center"
         android:textColor="#FBFBFB"
         android:textSize="19sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview1"
-        android:layout_marginTop="30dp"
-        android:textAlignment="center"/>
+        app:layout_constraintTop_toBottomOf="@+id/textview1" />
 
 
     <EditText
         android:id="@+id/email"
-        android:textColor="@color/white"
-        android:textSize="24sp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:backgroundTint="#CCCCCC"
         android:drawableLeft="@drawable/baseline_account_circle_24"
         android:drawablePadding="13dp"
-        android:hint="@string/email"
+        android:hint="Email"
         android:inputType="textEmailAddress"
+        android:textColor="@color/white"
         android:textColorHint="@color/white"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textview2"
@@ -72,10 +72,11 @@
         android:backgroundTint="#CCCCCC"
         android:drawableLeft="@drawable/baseline_key_24"
         android:drawablePadding="13dp"
-        android:hint="@string/password"
-        android:textSize="24sp"
+        android:hint="Password"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
+        android:textSize="24sp"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textview2"
@@ -87,11 +88,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="232dp"
         android:layout_marginTop="28dp"
-        android:text="@string/forgot_password"
-        android:textColor="@color/white"
-
-        android:textStyle="bold"
         android:onClick="forgotpassword"
+        android:text="Forgot Password"
+
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password" />
 
@@ -99,44 +100,48 @@
         android:id="@+id/Btn1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="14dp"
         android:layout_gravity="center"
-        android:text="@string/sign_in"
+        android:background="@drawable/button"
+        android:onClick="admin"
+        android:padding="14dp"
+        android:src="@drawable/button"
+        android:text="Sign In"
         android:textAllCaps="false"
         android:textStyle="bold"
-        android:onClick="admin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
         app:layout_constraintVertical_bias="0.7"
         app:layout_constraintWidth_percent=".6" />
+
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/don_t_have_an_account"
+        android:text="Don't have an account?"
 
         android:textAlignment="center"
         android:textColor="#FBFBFB"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Btn1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias=".4"/>
+        app:layout_constraintHorizontal_bias=".4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Btn1" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=" Registers"
-        android:textAlignment="center"
-
-        android:textStyle="bold"
-        android:textColor="#FBFBFB"
         android:onClick="register"
+        android:text=" Register"
+
+        android:textAlignment="center"
+        android:textColor="#FBFBFB"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.102"
         app:layout_constraintStart_toEndOf="@id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/Btn1"/>
+        app:layout_constraintTop_toBottomOf="@+id/Btn1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
