--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -46,84 +46,88 @@
 
     <EditText
         android:id="@+id/email"
-        android:textColor="@color/white"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="36dp"
         android:backgroundTint="#CCCCCC"
-        android:drawableLeft="@drawable/baseline_email_24"
+        android:drawableLeft="@drawable/baseline_account_circle_24"
         android:drawablePadding="13dp"
-        android:hint="email_address"
+        android:hint="Email"
         android:inputType="textEmailAddress"
+        android:textColor="@color/white"
         android:textColorHint="@color/white"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textview2"
         app:layout_constraintWidth_percent=".8" />
 
     <EditText
-        android:textColor="@color/white"
         android:id="@+id/pass"
         android:layout_width="0dp"
-        android:inputType="textPassword"
         android:layout_height="wrap_content"
-        android:layout_marginTop="156dp"
+        android:layout_marginTop="104dp"
         android:backgroundTint="#CCCCCC"
         android:drawableLeft="@drawable/baseline_key_24"
         android:drawablePadding="13dp"
-        android:hint="@string/password"
+        android:hint="Password"
+        android:textColor="@color/white"
         android:textColorHint="@color/white"
+        android:textSize="24sp"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textview2"
         app:layout_constraintWidth_percent=".8" />
 
 
-
-
     <Button
         android:id="@+id/registerButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="14dp"
         android:layout_gravity="center"
-        android:text="Register"
-
         android:layout_marginTop="5dp"
+        android:background="@drawable/button"
+
+        android:padding="14dp"
+        android:text="Register"
         android:textAllCaps="false"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pass"
-        app:layout_constraintVertical_bias="0.7"
-        app:layout_constraintWidth_percent=".6" />
+        app:layout_constraintVertical_bias="0.693"
+        app:layout_constraintWidth_percent=".6"
+        tools:layout_editor_absoluteX="0dp" />
+
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="already_registered"
+        android:text="Already Registered?"
         android:textAlignment="center"
         android:textColor="#FBFBFB"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/registerButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias=".4"/>
+        app:layout_constraintHorizontal_bias=".4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/registerButton" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=" Login"
         android:onClick="login"
+        android:text=" Login"
         android:textAlignment="center"
+        android:textColor="#FBFBFB"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="#FBFBFB"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.133"
         app:layout_constraintStart_toEndOf="@id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/registerButton"
-        app:layout_constraintHorizontal_bias="0"/>
+        app:layout_constraintVertical_bias="0.458" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
