--- a/app/src/main/res/layout/activity_wishing_screen.xml
+++ b/app/src/main/res/layout/activity_wishing_screen.xml
@@ -18,9 +18,9 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="410dp"
-            android:layout_height="644dp"
-            
+            android:layout_width="413dp"
+            android:layout_height="654dp"
+
             android:src="@drawable/wish"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -63,15 +63,29 @@
             app:layout_constraintStart_toStartOf="@id/imageView"
             app:layout_constraintTop_toTopOf="@id/imageView" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
 
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <Button
+        android:id="@+id/saveToGallery"
+        android:layout_width="191dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="220dp"
+        android:layout_marginBottom="52dp"
+        android:background="@drawable/frame"
+        android:fontFamily="@font/poppins_bold"
+        android:text="Save to Gallery"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/share"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_width="206dp"
+        android:layout_height="51dp"
         android:layout_marginBottom="52dp"
         android:background="@drawable/frame"
         android:fontFamily="@font/poppins_bold"
